scss/module-top-information.scss
/*******************************************************************************
 * Licensed Materials - Property of IBM
 * (c) Copyright IBM Corporation 2019. All Rights Reserved.
 *
 * Note to U.S. Government Users Restricted Rights:
 * Use, duplication or disclosure restricted by GSA ADP Schedule
 * Contract with IBM Corp.
 *******************************************************************************/
@import 'node_modules/carbon-components/scss/globals/scss/_colors';
@import 'variables';

.module-top-information {
  width: 49%;
  background: white;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;

  .no-informations {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0 auto;
    width: 20rem;

    .no-informations-icon {
      width: 175px;
      height: 240px;
    }

    .no-informations-title {
      font-weight: bold;
      margin-bottom: 9px;
      font-size: 18px;
      text-align: center;
      color: $mcm_color_blue;
    }

    .no-informations-detail {
      font-weight: 300;
      font-size: 14px;
      font-style: italic;
      text-align: center;
      line-height: 1.2;
      color: $color__navy-gray-6;
    }
  }

  .header-container {
    display: flex;
    align-items: center;
    border-bottom: 1px solid $color__gray-1;
    padding: 0 20px;
    height: 40px;

    .header-title {
      width: 50%;
      font-size: 14px;
      font-weight: bold;
      line-height: 23px;
      &.hasChoice {
        border-right: 1px solid $color__gray-1;
      }
    }
    .header-tab {
      margin: auto;
      width: 50%;
      .bx--tabs__nav-item {
        margin-left: auto;
        overflow: hidden;
        &:last-child {
          margin-left: 1rem;
        }
        .bx--tabs__nav-link:focus {
          box-shadow: none;
        }
      }
      .bx--tabs__nav-item:focus {
        border : 1px solid $color__gray-1;
      }
    }

    .bx--dropdown {
      font-size: 14px;
      background-color: transparent;
      box-shadow: none;
      white-space: nowrap;
      width: auto;

      .bx--list-box__label {
        color: $color__blue-51;
        padding-right: 32px;
        padding-top: 0.1rem;
      }

      .bx--list-box__field {
        padding: 0 8px;
        &:focus {
         box-shadow: none;
       }
      }

      .bx--list-box__menu-item {
        color: $mcm_color_gray_20;
        padding: 14px;
        height: 26px;
        font-weight: normal;

        &:hover, .bx--list-box__menu-item--highlighted {
          text-decoration: none;
        }
      }

      .bx--list-box__menu {
        max-height: 30rem;
      }
    }
  }

  // .single-strip {
  //   outline:none;
  // }

  .information-card-container {
    display: flex;
    flex-direction: column;

    > div {
      flex-basis: 33%;
    }

    .single-strip {
      padding: 0;
      border-bottom: 1px solid $color__gray-1;
      &:hover {
        cursor: pointer;
      }

      &:hover>.information-card-content .card-inner-content .card-informations .card-information-count {
        color: $color__blue-51;
      }

      &:hover>.information-card-content .card-inner-content .card-name-description .name-clickable {
        color: $color__blue-51;
      }

      &:hover>.information-card-content .card-inner-content .card-name-description .description-clickable {
        color: $color__blue-51;
      }

      &:hover>.information-card-content .card-inner-content .card-name-description .name-empty {
        cursor: auto;
      }

      .information-card-content {
        display: flex;
        height: 140px;
        background-color: white;

       .card-inner-content {
         display: flex;
         width: 100%;

          .card-informations {
            display: flex;
            flex-direction: column;
            flex: 0 0 100px;
            align-items: center;
            justify-content: center;
            // outline:none;

            .card-information-count {
              font-size: 34px;
              font-weight: bold;
              color: $mcm_color_blue_gray;
              &.alert {
                color: $mcm_color_red;
              }
            }

            &.empty {
              &:hover {
                cursor: default;
              }
            }
          }

          .card-name-description {
            display: flex;
            //flex-wrap: wrap;
            flex-direction: column;
            align-items: flex-start;
            justify-content: center;
            padding: 0px 10px;
            height: 110px;

            .card-name {
              padding-right: 40px;
              display: flex;
              flex-wrap: wrap;
              font-weight: bold;
              padding-bottom: 5px;
              color: $mcm_color_gray_20;
            }

            .card-description {
              padding-right: 40px;
              font-style: italic;
              font-size: 12px;
              color: $mcm_color_blue_gray;
              line-height: 18px;
              max-height: 36px;
              overflow: hidden;

              .LinesEllipsis {
                white-space: pre-wrap;
              }
            }
          }
        }
      }
    }

    .empty-strip {
      padding: 0;
      border-bottom: 1px solid $color__gray-1;
      &:hover {
        cursor: default;
      }

      &:hover>.information-card-content .card-inner-content .card-name-description .card-description {
        cursor: auto;
      }
    }
  }
}

@media (max-width: 1222px) {
  .card-container-container > div {
    flex-grow: 1;
    margin-left: -.625rem;
  }
}

@media (max-width: 1088px) {
  .card-container-container > div {
    flex-grow: 0;
  }
}

@media (max-width: 799px) {
  .card-container-container > div {
    flex-grow: 1;
    margin-right: -.625rem;
  }
}

